Fix parcel runtime issues with async
Had to fix parcel regeneratorRuntime issues (async/await) because of a chrome issue? (v74?)

--- a/src/index.html
+++ b/src/index.html
@@ -5,9 +5,7 @@
     <link href="https://fonts.googleapis.com/css?family=Audiowide|Roboto" rel="stylesheet">
     <link href="./app.less" rel="stylesheet">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <style>
-
-    </style>
+    <script src="./runtime.js"></script>
 </head>
 
 <body>
