--- a/src/index.html
+++ b/src/index.html
@@ -5,7 +5,9 @@
     <link href="https://fonts.googleapis.com/css?family=Audiowide|Roboto" rel="stylesheet">
     <link href="./app.less" rel="stylesheet">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <script src="./runtime.js"></script>
+    <style>
+
+    </style>
 </head>
 
 <body>
