--- a/src/index.html
+++ b/src/index.html
@@ -8,9 +8,9 @@
     <script src="./runtime.js"></script>
 </head>
 
-<body>
-    <div id="app"></div>
+<body class="app">
+    <div id="root"></div>
 </body>
-<script src="./App.jsx"></script>
+<script src="./index.js"></script>
 
 </html>
